chore: overflow issue attempt to fix

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.root {
+  width:fit-content;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
